# flappy-bird

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Game.cpp  Game.h  Renderer.cpp  Renderer.h  gles2jni.cpp  gles2jni.h
app/src/main/java/com/android/gles2jni/: GLES2JNIActivity.java  GLES2JNILib.java  GLES2JNIView.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
